# rotor

./: .gitignore  .gitmodules  README.md  run.sh
src/drone_communication/: CMakeLists.txt  package.xml  setup.py
src/drone_communication/scripts/: Otw.py  Testy.py  drone_communication.py
src/http_core/: CMakeLists.txt  package.xml  setup.py
src/http_core/param/: dynamic_params.yml
src/http_core/scripts/: http_client.py  http_core.py
src/http_core/scripts/client/: com_client_senders.py
src/http_core/scripts/core/: collectors.py  com_receiver.py  containers.py  kss_event.py  module_controllers.py  upload_mission_event.py
src/rotor/: CMakeLists.txt  package.xml  setup.py
src/rotor/scripts/: rotor.py
src/rotor/scripts/rotor_internal/: rotor_driver.py
