<?xml version="1.0"?>
<package format="2">
    <name>drone_communication</name>
    <version>0.0.0</version>
    <description>The scheduler package</description>

    <maintainer email="damiano@todo.todo">damiano</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>actionlib</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>commons</depend>
    <depend>rospy</depend>
    <depend>mavros</depend>
</package>
